# api/src/presentation/task/handler.go
@@ -1,6 +1,8 @@
 package task
 
 import (
+	"strconv"
+
 	"github.com/gin-gonic/gin"
 
 	"github.com/shinya-ac/TodoAPI/application/task"
@@ -11,13 +13,16 @@ import (
 
 type handler struct {
 	createTaskUseCase *task.CreateTaskUseCase
+	getTaskUseCase    *task.GetTaskUseCase
 }
 
 func NewHandler(
 	createTaskUseCase *task.CreateTaskUseCase,
+	getTaskUseCase *task.GetTaskUseCase,
 ) handler {
 	return handler{
 		createTaskUseCase: createTaskUseCase,
+		getTaskUseCase:    getTaskUseCase,
 	}
 }
 
@@ -30,7 +35,7 @@ func NewHandler(
 // @Success 201 {object} createTaskResponse
 // @Router /v1/task [post]
 func (h handler) CreateTask(ctx *gin.Context) {
-	logging.Logger.Info("CreateTaskエンドポイント実行開始")
+	logging.Logger.Info("CreateTask実行開始")
 	var params CreateTaskParams
 	err := ctx.ShouldBindJSON(&params)
 	if err != nil {
@@ -62,4 +67,40 @@ func (h handler) CreateTask(ctx *gin.Context) {
 		TaskId: dto.Id,
 	}
 	settings.ReturnStatusCreated(ctx, response)
+}
+
+// GetTask godoc
+// @Summary Task一覧を取得する
+// @Tags Task
+// @Produce json
+// @Param page query int false "ページ数" default(1)
+// @Param pageSize query int false "ページサイズ" default(100)
+// @Success 200 {object} getTaskResponse
+// @Router /v1/task [get]
+func (h handler) GetTasks(ctx *gin.Context) {
+	logging.Logger.Info("GetTasks実行開始")
+
+	page := 1
+	pageSize := 100
+
+	if p := ctx.Query("page"); p != "" {
+		page, _ = strconv.Atoi(p)
+	}
+	if ps := ctx.Query("pageSize"); ps != "" {
+		pageSize, _ = strconv.Atoi(ps)
+	}
+
+	offset := (page - 1) * pageSize
+
+	dto, err := h.getTaskUseCase.Run(ctx, offset, pageSize)
+	if err != nil {
+		logging.Logger.Error("usecaseの実行に失敗", "error", err)
+		settings.ReturnError(ctx, err)
+		return
+	}
+
+	response := getTaskResponse{
+		Tasks: dto.Tasks,
+	}
+	settings.ReturnStatusOK(ctx, response)
 }
